Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-25650

memcached segfault from xattr::get_body_offset

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Critical
    • 5.0.0
    • 5.0.0
    • memcached
    • Untriaged
    • No

    Description

      The error occurred during a rebalance of longevity test.  The test has a sync_gateway attached for convergence... the test and repro info is outlined here:

      Basically there is a mixed workflow of json & binary docs going at ~30k ops.

      Build is 5.0.0-3456 which we've run several times, but this is first time encountering this issue.

       

      Thread 1 (LWP 27192):
      #0 0x00007f71c65a56b3 in cb::xattr::get_body_offset (payload=...)
      at /home/couchbase/jenkins/workspace/couchbase-server-unix/kv_engine/xattr/utils.cc:119
      #1 0x0000000000447ccc in document_pre_expiry (itm_info=...)
      at /home/couchbase/jenkins/workspace/couchbase-server-unix/kv_engine/daemon/doc_pre_expiry.cc:33
      #2 0x00007f71bb517df9 in KVBucket::deleteExpiredItem (this=0x7f71b0a65400, it=..., startTime=1502411270, source=Pager)
      at /home/couchbase/jenkins/workspace/couchbase-server-unix/kv_engine/engines/ep/src/kv_bucket.cc:590
      #3 0x00007f71bb514680 in KVBucket::deleteExpiredItems (this=0x7f71b0a65400, 
      itms=<error reading variable: Cannot access memory at address 0x7f7170a0e540>, source=Pager)
      at /home/couchbase/jenkins/workspace/couchbase-server-unix/kv_engine/engines/ep/src/kv_bucket.cc:615
      #4 0x00007f71bb513768 in update (this=0x7f7170a0e500)
      at /home/couchbase/jenkins/workspace/couchbase-server-unix/kv_engine/engines/ep/src/item_pager.cc:156
      #5 PagingVisitor::visitBucket (this=0x7f7170a0e500, vb=<error reading variable: Cannot access memory at address 0x7f7170f07908>)
      at /home/couchbase/jenkins/workspace/couchbase-server-unix/kv_engine/engines/ep/src/item_pager.cc:108
      #6 0x00007f71bb51bac2 in VBCBAdaptor::run (this=0x7f7070ef9158)
      at /home/couchbase/jenkins/workspace/couchbase-server-unix/kv_engine/engines/ep/src/kv_bucket.cc:2754
      #7 0x00007f71bb50067b in ExecutorThread::run (this=0x7f717750f800)
      at /home/couchbase/jenkins/workspace/couchbase-server-unix/kv_engine/engines/ep/src/executorthread.cc:120
      #8 0x00007f71c618a84e in run (this=0x7f7177431c20)
      at /home/couchbase/jenkins/workspace/couchbase-server-unix/platform/src/cb_pthreads.cc:59
      #9 platform_thread_wrap (arg=0x7f7177431c20)
      at /home/couchbase/jenkins/workspace/couchbase-server-unix/platform/src/cb_pthreads.cc:72
      #10 0x00007f71c5b4adc5 in start_thread () from /usr/lib64/libpthread-2.17.so
      #11 0x00007f71c3cf676d in clone () from /usr/lib64/libc-2.17.so
      

       

      – core dump:  https://s3.amazonaws.com/scalability-mcafee/core_dump.txt

      – node where crash occurred: https://s3.amazonaws.com/scalability-mcafee/172.23.97.237.zip

      – other node collect infos: http://qa.sc.couchbase.com/job/sequoia-cbcollectinfo-linux/64/artifact/logs/

       

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            tommie Tommie McAfee (Inactive)
            tommie Tommie McAfee (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            12 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty