MB-25650: Add guard to protect creation on invalid datatype

It does not make sense to set the (currently defined) datatype
bits on a document with a 0 sized body.

Change-Id: I7810d13b0dcb32f550a5225d4aa18958236304a0
Reviewed-on: http://review.couchbase.org/82193
Well-Formed: Build Bot <build@couchbase.com>
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Dave Rigby <daver@couchbase.com>